Fixed the error where listings weren't being added to the user Fixed the map shifting upward when listings are loaded on view listings page

--- a/src/app/listings/listings.page.scss
+++ b/src/app/listings/listings.page.scss
@@ -68,7 +68,7 @@ ion-card-header img {
       // margin-left: 50%;
       width: 40%;
       margin-left: 55%;
-      margin-top:  -750px;
+      margin-top: 2%;
   
       height: 600px;
       border-radius: 10px;
@@ -95,4 +95,8 @@ ion-card-header img {
 
     #back-arrow{
       color: #0DAE4F;
+    }
+
+    #all-content{
+
     }
